hphp/test/zend/good/ext-sqlite3/sqlite3_32_createAggregate_paramCount.php
<?php

$db = new SQLite3(':memory:');

$db->createAggregate ();

$db->close();

echo "Done"
?>