hphp/test/zend/bad/ext/spl/tests/fixedarray_009.php
<?php

$a = new SplFixedArray('FOO');

?>